[gd_scene load_steps=84 format=3 uid="uid://bgncfnu33yavy"]

[ext_resource type="Texture2D" uid="uid://cy0y4x7pxfgpo" path="res://assets/free-slime-mobs-pixel-art-top-down-sprite-pack/PNG/Slime1/Idle/Slime1_Idle_body.png" id="1_jxtgn"]
[ext_resource type="Script" path="res://scenes/game/enemies/default_slime.gd" id="1_ssm55"]
[ext_resource type="Texture2D" uid="uid://cdi67u7cwe6vp" path="res://assets/free-slime-mobs-pixel-art-top-down-sprite-pack/PNG/Slime1/Hurt/Slime1_Hurt_body.png" id="2_0tsln"]
[ext_resource type="Texture2D" uid="uid://d0ao3qdahh1s2" path="res://assets/free-slime-mobs-pixel-art-top-down-sprite-pack/PNG/Slime1/Walk/Slime1_Walk_body.png" id="2_af4jk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u1b0b"]
atlas = ExtResource("2_0tsln")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aa6n3"]
atlas = ExtResource("2_0tsln")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0v84a"]
atlas = ExtResource("2_0tsln")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qb85"]
atlas = ExtResource("2_0tsln")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyki0"]
atlas = ExtResource("2_0tsln")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j17dh"]
atlas = ExtResource("2_0tsln")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_smvcw"]
atlas = ExtResource("2_0tsln")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2t7q"]
atlas = ExtResource("2_0tsln")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_csnyc"]
atlas = ExtResource("2_0tsln")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8vgj"]
atlas = ExtResource("2_0tsln")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kvly"]
atlas = ExtResource("2_0tsln")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nc3mm"]
atlas = ExtResource("2_0tsln")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jal7"]
atlas = ExtResource("2_0tsln")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvjjk"]
atlas = ExtResource("2_0tsln")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4228"]
atlas = ExtResource("2_0tsln")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wx85m"]
atlas = ExtResource("2_0tsln")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tejof"]
atlas = ExtResource("2_0tsln")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_75kbq"]
atlas = ExtResource("2_0tsln")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ifka"]
atlas = ExtResource("2_0tsln")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vti38"]
atlas = ExtResource("2_0tsln")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6s0a"]
atlas = ExtResource("1_jxtgn")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_66g7u"]
atlas = ExtResource("1_jxtgn")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hakni"]
atlas = ExtResource("1_jxtgn")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_miakl"]
atlas = ExtResource("1_jxtgn")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl4ac"]
atlas = ExtResource("1_jxtgn")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v07as"]
atlas = ExtResource("1_jxtgn")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bh2t4"]
atlas = ExtResource("1_jxtgn")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ugyk"]
atlas = ExtResource("1_jxtgn")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xp45q"]
atlas = ExtResource("1_jxtgn")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wdbf"]
atlas = ExtResource("1_jxtgn")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_74rw7"]
atlas = ExtResource("1_jxtgn")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4q4f"]
atlas = ExtResource("1_jxtgn")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqwa2"]
atlas = ExtResource("1_jxtgn")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwshp"]
atlas = ExtResource("1_jxtgn")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2i7e4"]
atlas = ExtResource("1_jxtgn")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1ol3"]
atlas = ExtResource("1_jxtgn")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjqa5"]
atlas = ExtResource("1_jxtgn")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ergd"]
atlas = ExtResource("1_jxtgn")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_86lp4"]
atlas = ExtResource("1_jxtgn")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyv4o"]
atlas = ExtResource("1_jxtgn")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4g4l"]
atlas = ExtResource("1_jxtgn")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwf41"]
atlas = ExtResource("1_jxtgn")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4j00j"]
atlas = ExtResource("1_jxtgn")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l436n"]
atlas = ExtResource("1_jxtgn")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ahx0"]
atlas = ExtResource("2_af4jk")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j31v4"]
atlas = ExtResource("2_af4jk")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyoft"]
atlas = ExtResource("2_af4jk")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdj15"]
atlas = ExtResource("2_af4jk")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_38ths"]
atlas = ExtResource("2_af4jk")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltp3r"]
atlas = ExtResource("2_af4jk")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmxhx"]
atlas = ExtResource("2_af4jk")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aowxd"]
atlas = ExtResource("2_af4jk")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0tdr"]
atlas = ExtResource("2_af4jk")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma08h"]
atlas = ExtResource("2_af4jk")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb2ca"]
atlas = ExtResource("2_af4jk")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6ipq"]
atlas = ExtResource("2_af4jk")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvwm7"]
atlas = ExtResource("2_af4jk")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_04866"]
atlas = ExtResource("2_af4jk")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_skknc"]
atlas = ExtResource("2_af4jk")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6othc"]
atlas = ExtResource("2_af4jk")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxovt"]
atlas = ExtResource("2_af4jk")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yiqe"]
atlas = ExtResource("2_af4jk")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgo6m"]
atlas = ExtResource("2_af4jk")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rt7h1"]
atlas = ExtResource("2_af4jk")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tueyk"]
atlas = ExtResource("2_af4jk")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5yyt"]
atlas = ExtResource("2_af4jk")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8o5u"]
atlas = ExtResource("2_af4jk")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhnsx"]
atlas = ExtResource("2_af4jk")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj54v"]
atlas = ExtResource("2_af4jk")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hf5fi"]
atlas = ExtResource("2_af4jk")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcxb7"]
atlas = ExtResource("2_af4jk")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5euqh"]
atlas = ExtResource("2_af4jk")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_furqe"]
atlas = ExtResource("2_af4jk")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqt52"]
atlas = ExtResource("2_af4jk")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_twxwk"]
atlas = ExtResource("2_af4jk")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8m6tw"]
atlas = ExtResource("2_af4jk")
region = Rect2(448, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_dlmvt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1b0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aa6n3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0v84a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qb85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyki0")
}],
"loop": false,
"name": &"hurt_d",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j17dh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smvcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2t7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_csnyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8vgj")
}],
"loop": false,
"name": &"hurt_l",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kvly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nc3mm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jal7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvjjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4228")
}],
"loop": false,
"name": &"hurt_r",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wx85m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tejof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75kbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ifka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vti38")
}],
"loop": false,
"name": &"hurt_u",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6s0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66g7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hakni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miakl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl4ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v07as")
}],
"loop": true,
"name": &"idle_d",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bh2t4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ugyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xp45q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wdbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74rw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4q4f")
}],
"loop": true,
"name": &"idle_l",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqwa2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwshp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2i7e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1ol3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjqa5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ergd")
}],
"loop": true,
"name": &"idle_r",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_86lp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyv4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4g4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwf41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4j00j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l436n")
}],
"loop": true,
"name": &"idle_u",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ahx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j31v4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyoft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdj15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38ths")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltp3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmxhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aowxd")
}],
"loop": true,
"name": &"walk_d",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0tdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma08h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb2ca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6ipq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvwm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04866")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skknc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6othc")
}],
"loop": true,
"name": &"walk_l",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxovt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yiqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgo6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rt7h1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tueyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5yyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8o5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhnsx")
}],
"loop": true,
"name": &"walk_r",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj54v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hf5fi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcxb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5euqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_furqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqt52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twxwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8m6tw")
}],
"loop": true,
"name": &"walk_u",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_u6ccj"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3g6a4"]
radius = 144.0

[node name="DefaultSlime" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
collision_layer = 3
script = ExtResource("1_ssm55")
damage_type = "normal"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dlmvt")
animation = &"hurt_d"
speed_scale = 1.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_u6ccj")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("CircleShape2D_3g6a4")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 50.0

[node name="NavigationTimer" type="Timer" parent="."]
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="timeout" from="NavigationTimer" to="." method="_on_navigation_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
